[gd_scene load_steps=49 format=3 uid="uid://cfhbae5wr34to"]

[ext_resource type="Script" path="res://Scripts/PlayerScripts/AdavioScripts/scr_form_adavio.gd" id="1_fal4e"]
[ext_resource type="Shader" path="res://Scripts/Shaders/sdr_player.gdshader" id="2_cf8bl"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/AdavioScripts/scr_form_adavio_magic.gd" id="2_dmnhk"]
[ext_resource type="PackedScene" uid="uid://doewrc4so3dd1" path="res://Scenes/PlayerScenes/AdavioScenes/ent_projectile_adavio_voidBit.tscn" id="3_4f8v2"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/PlayerGeneralScripts/scr_player_sprite.gd" id="3_yvie7"]
[ext_resource type="Shader" path="res://Scripts/Shaders/sdr_silhouette.gdshader" id="4_1qxif"]
[ext_resource type="Texture2D" uid="uid://b3g7mlnl0kk04" path="res://Sprites/PlayerSprites/AdavioSprites/spr_player_adavio_castArm.png" id="4_xe7fv"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/AdavioScripts/scr_form_adavio_melee.gd" id="5_u2u4k"]
[ext_resource type="PackedScene" uid="uid://bdqqxuccgdwgu" path="res://Scenes/PlayerScenes/AdavioScenes/ent_adavio_melee.tscn" id="6_esa0v"]
[ext_resource type="AudioStream" uid="uid://cui0ytcfs00qg" path="res://Audio/PlayerAudio/AdavioAudio/snd_adavio_voidBits.wav" id="6_guxto"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/AdavioScripts/scr_form_adavio_special.gd" id="7_r5leq"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/AdavioScripts/scr_form_adavio_special_collision.gd" id="8_6jp02"]
[ext_resource type="Texture2D" uid="uid://b1nvladpeghqw" path="res://Sprites/PlayerSprites/AdavioSprites/spr_player_adavio.png" id="9_vuyvq"]
[ext_resource type="AudioStream" uid="uid://bmopfrhoek2ve" path="res://Audio/PlayerAudio/AdavioAudio/snd_adavio_thrust.mp3" id="12_p14k2"]
[ext_resource type="AudioStream" uid="uid://bcmosdfyhm30c" path="res://Audio/PlayerAudio/PlayerGeneralAudio/snd_walk_grass.wav" id="12_uiuo1"]
[ext_resource type="AudioStream" uid="uid://dp4ji1lfhnwlb" path="res://Audio/PlayerAudio/AdavioAudio/snd_adavio_riftCrush.wav" id="15_me42l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_73mfq"]
resource_local_to_scene = true
shader = ExtResource("2_cf8bl")
shader_parameter/hurt_color = Color(0.6, 0.2, 0.2, 1)
shader_parameter/inv_color = Color(0.67, 0.59, 0.16, 1)
shader_parameter/shield_color = Color(0.2, 0.2, 0.9, 1)
shader_parameter/swap_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0
shader_parameter/is_hurt = false
shader_parameter/is_invincible = false
shader_parameter/is_shielded = false
shader_parameter/is_swap = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ac5j2"]
shader = ExtResource("4_1qxif")
shader_parameter/silhouette_color = Color(0, 0, 0, 0.5)
shader_parameter/active = true

[sub_resource type="Animation" id="Animation_opv6i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeSkill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeSkill:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_ga7gg"]
resource_name = "anim_adavio_hook_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 3), Vector2i(13, 3), Vector2i(14, 3), Vector2i(15, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeSkill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, -6), Vector2(4, -3), Vector2(4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeSkill:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_tqida"]
resource_name = "anim_adavio_hook_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 3), Vector2i(9, 3), Vector2i(10, 3), Vector2i(11, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeSkill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-2, -7), Vector2(-5, -7), Vector2(-8, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeSkill:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_tsfms"]
resource_name = "anim_adavio_hook_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeSkill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, -4), Vector2(5, -4), Vector2(8, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeSkill:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_57fpo"]
resource_name = "anim_adavio_hook_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeSkill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, -9), Vector2(-1, -12), Vector2(-1, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeSkill:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vuoyk"]
resource_name = "anim_adavio_idleCast_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_0n5jc"]
resource_name = "anim_adavio_idleCast_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_wal8e"]
resource_name = "anim_adavio_idleCast_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_8tej1"]
resource_name = "anim_adavio_idleCast_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 4)]
}

[sub_resource type="Animation" id="Animation_qtl57"]
resource_name = "anim_adavio_idle_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_kyq6g"]
resource_name = "anim_adavio_idle_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_xm2sb"]
resource_name = "anim_adavio_idle_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_w6bui"]
resource_name = "anim_adavio_idle_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_bofth"]
resource_name = "anim_adavio_roll_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 2), Vector2i(13, 2), Vector2i(14, 2), Vector2i(15, 2)]
}

[sub_resource type="Animation" id="Animation_5dot3"]
resource_name = "anim_adavio_roll_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2)]
}

[sub_resource type="Animation" id="Animation_428pn"]
resource_name = "anim_adavio_roll_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_0r67v"]
resource_name = "anim_adavio_roll_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_ljsup"]
resource_name = "anim_adavio_runCast_down"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 5), Vector2i(13, 5), Vector2i(14, 5), Vector2i(15, 5)]
}

[sub_resource type="Animation" id="Animation_ug484"]
resource_name = "anim_adavio_runCast_left"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 5), Vector2i(9, 5), Vector2i(10, 5), Vector2i(11, 5)]
}

[sub_resource type="Animation" id="Animation_56jhv"]
resource_name = "anim_adavio_runCast_right"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_2mx8b"]
resource_name = "anim_adavio_runCast_up"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5), Vector2i(7, 5)]
}

[sub_resource type="Animation" id="Animation_jhaeb"]
resource_name = "anim_adavio_run_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1), Vector2i(15, 1)]
}

[sub_resource type="Animation" id="Animation_f5os1"]
resource_name = "anim_adavio_run_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1)]
}

[sub_resource type="Animation" id="Animation_djwsk"]
resource_name = "anim_adavio_run_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_ylioq"]
resource_name = "anim_adavio_run_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_0xlqt"]
resource_name = "anim_adavio_special_cast"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 6)]
}

[sub_resource type="Animation" id="Animation_b3bvb"]
resource_name = "anim_adavio_special_enter"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 8), Vector2i(3, 8), Vector2i(4, 8), Vector2i(5, 8), Vector2i(6, 8), Vector2i(7, 8), Vector2i(8, 8)]
}

[sub_resource type="Animation" id="Animation_hwa5l"]
resource_name = "anim_adavio_special_exit"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7), Vector2i(7, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kr88i"]
_data = {
"RESET": SubResource("Animation_opv6i"),
"anim_adavio_hook_down": SubResource("Animation_ga7gg"),
"anim_adavio_hook_left": SubResource("Animation_tqida"),
"anim_adavio_hook_right": SubResource("Animation_tsfms"),
"anim_adavio_hook_up": SubResource("Animation_57fpo"),
"anim_adavio_idleCast_down": SubResource("Animation_vuoyk"),
"anim_adavio_idleCast_left": SubResource("Animation_0n5jc"),
"anim_adavio_idleCast_right": SubResource("Animation_wal8e"),
"anim_adavio_idleCast_up": SubResource("Animation_8tej1"),
"anim_adavio_idle_down": SubResource("Animation_qtl57"),
"anim_adavio_idle_left": SubResource("Animation_kyq6g"),
"anim_adavio_idle_right": SubResource("Animation_xm2sb"),
"anim_adavio_idle_up": SubResource("Animation_w6bui"),
"anim_adavio_roll_down": SubResource("Animation_bofth"),
"anim_adavio_roll_left": SubResource("Animation_5dot3"),
"anim_adavio_roll_right": SubResource("Animation_428pn"),
"anim_adavio_roll_up": SubResource("Animation_0r67v"),
"anim_adavio_runCast_down": SubResource("Animation_ljsup"),
"anim_adavio_runCast_left": SubResource("Animation_ug484"),
"anim_adavio_runCast_right": SubResource("Animation_56jhv"),
"anim_adavio_runCast_up": SubResource("Animation_2mx8b"),
"anim_adavio_run_down": SubResource("Animation_jhaeb"),
"anim_adavio_run_left": SubResource("Animation_f5os1"),
"anim_adavio_run_right": SubResource("Animation_djwsk"),
"anim_adavio_run_up": SubResource("Animation_ylioq"),
"anim_adavio_special_cast": SubResource("Animation_0xlqt"),
"anim_adavio_special_enter": SubResource("Animation_b3bvb"),
"anim_adavio_special_exit": SubResource("Animation_hwa5l")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cd7yv"]

[node name="FormController" type="Node2D"]
script = ExtResource("1_fal4e")

[node name="CharacterSprite" type="Sprite2D" parent="."]
clip_children = 2
material = SubResource("ShaderMaterial_73mfq")
position = Vector2(0, 2.02656e-06)
texture = ExtResource("9_vuyvq")
offset = Vector2(0, -8)
hframes = 20
vframes = 20
script = ExtResource("3_yvie7")

[node name="Silhouette" type="Sprite2D" parent="CharacterSprite"]
z_index = 100
material = SubResource("ShaderMaterial_ac5j2")
hframes = 16
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kr88i")
}

[node name="MagicSkill" type="Node2D" parent="."]
position = Vector2(1, -5)
script = ExtResource("2_dmnhk")
projectile_scene = ExtResource("3_4f8v2")

[node name="MagicSprite" type="Sprite2D" parent="MagicSkill"]
texture = ExtResource("4_xe7fv")
offset = Vector2(4, 0)
script = ExtResource("3_yvie7")

[node name="Silhouette" type="Sprite2D" parent="MagicSkill/MagicSprite"]
z_index = 100
material = SubResource("ShaderMaterial_ac5j2")
hframes = 16
vframes = 10

[node name="ProjectileSpawn" type="Node2D" parent="MagicSkill"]
position = Vector2(5, 0)

[node name="MagicSFX" type="AudioStreamPlayer" parent="MagicSkill"]
stream = ExtResource("6_guxto")

[node name="MeleeSkill" type="Node2D" parent="."]
position = Vector2(2, -4)
rotation = 1.5708
script = ExtResource("5_u2u4k")

[node name="MeleeArea" parent="MeleeSkill" instance=ExtResource("6_esa0v")]

[node name="MeleeSFX" type="AudioStreamPlayer" parent="MeleeSkill"]
stream = ExtResource("12_p14k2")
volume_db = -20.0

[node name="SpecialSkill" type="Node2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(1, 0.6)
script = ExtResource("7_r5leq")
projectile_scene = ExtResource("3_4f8v2")

[node name="SpecialArea" type="Area2D" parent="SpecialSkill"]
position = Vector2(0, -30)
collision_layer = 4
collision_mask = 288
script = ExtResource("8_6jp02")

[node name="SpecialShape" type="CollisionShape2D" parent="SpecialSkill/SpecialArea"]
position = Vector2(0, 30)
shape = SubResource("CircleShape2D_cd7yv")

[node name="SpecialSFX" type="AudioStreamPlayer" parent="SpecialSkill"]
stream = ExtResource("15_me42l")
volume_db = -10.0

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="MovementSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_uiuo1")
volume_db = -9.0
